--- a/Ui/tagger.ui
+++ b/Ui/tagger.ui
@@ -124,6 +124,9 @@
           <bold>false</bold>
          </font>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(211, 255, 192);</string>
+        </property>
         <property name="frameShape">
          <enum>QFrame::WinPanel</enum>
         </property>
@@ -134,7 +137,7 @@
          <number>0</number>
         </property>
         <property name="alternatingRowColors">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="showGrid">
          <bool>true</bool>
@@ -190,6 +193,9 @@
           <bold>false</bold>
          </font>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(210, 213, 255);</string>
+        </property>
         <property name="frameShape">
          <enum>QFrame::WinPanel</enum>
         </property>
@@ -197,7 +203,7 @@
          <number>1</number>
         </property>
         <property name="alternatingRowColors">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="rowCount">
          <number>1</number>
